--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -272,7 +272,7 @@
         <h4 class="plugin_summary">Content Rewriter</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contentrewrite</dt>
-            <dd class="plugin_version">Version 1.4.1 (GPL, Last Updated 2018-08-05)</dd>
+            <dd class="plugin_version">Version 1.4.1 (GPL, Last Updated 2018-08-06)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -560,7 +560,7 @@
         <h4 class="plugin_summary">Typeset/Extended Buttons for non-WYSIWYG editors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_typesetbuttons</dt>
-            <dd class="plugin_version">Version 0.24 (GPL, Last Updated 2017-04-10)</dd>
+            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2018-08-06)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Malte Diers, Matthias Gutjahr</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -568,7 +568,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_typesetbuttons.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_typesetbuttons">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_typesetbuttons" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_typesetbuttons" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_typesetbuttons/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -692,7 +692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.72 (GPL, Last Updated 2018-07-26)</dd>
+            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-08-06)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.72 (GPL, Last Updated 2018-07-26)</dd>
+            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-08-06)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
