--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -208,7 +208,7 @@
         <h4 class="plugin_summary">Amazon Media Button</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_amazonchooser</dt>
-            <dd class="plugin_version">Version 0.77 (GPL, Last Updated 2016-09-01)</dd>
+            <dd class="plugin_version">Version 0.78 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -400,7 +400,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.39 (GPL, Last Updated 2018-07-05)</dd>
+            <dd class="plugin_version">Version 2.40 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -464,7 +464,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.21 (GPL, Last Updated 2018-07-08)</dd>
+            <dd class="plugin_version">Version 3.22 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.43 (GPL, Last Updated 2018-07-26)</dd>
+            <dd class="plugin_version">Version 5.44 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -512,7 +512,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 4.14 (GPL, Last Updated 2018-07-26)</dd>
+            <dd class="plugin_version">Version 4.15 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
@@ -692,7 +692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-08-06)</dd>
+            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -772,7 +772,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.66 (GPL, Last Updated 2018-08-05)</dd>
+            <dd class="plugin_version">Version 3.67 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -804,7 +804,7 @@
         <h4 class="plugin_summary">Linktrimmer</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktrimmer</dt>
-            <dd class="plugin_version">Version 1.6.8 (GPL, Last Updated 2017-08-18)</dd>
+            <dd class="plugin_version">Version 1.6.9 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.43 (GPL, Last Updated 2018-07-26)</dd>
+            <dd class="plugin_version">Version 5.44 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -984,7 +984,7 @@
         <h4 class="plugin_summary">HTML META-Tags</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_metadesc</dt>
-            <dd class="plugin_version">Version 0.24 (GPL, Last Updated 2017-07-30)</dd>
+            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Don Chambers, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1300,7 +1300,7 @@
         <h4 class="plugin_summary">HTML META-Tags</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_metadesc</dt>
-            <dd class="plugin_version">Version 0.24 (GPL, Last Updated 2017-07-30)</dd>
+            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Don Chambers, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1380,7 +1380,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.39 (GPL, Last Updated 2018-07-05)</dd>
+            <dd class="plugin_version">Version 2.40 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1512,7 +1512,7 @@
         <h4 class="plugin_summary">Highlight search queries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_searchhighlight</dt>
-            <dd class="plugin_version">Version 1.8.3 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.8.3 (GPL, Last Updated 2018-04-14)</dd>
             <dd class="plugin_maintainers">Tom Sommer</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1644,7 +1644,7 @@
         <h4 class="plugin_summary">Contact Form</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contactform</dt>
-            <dd class="plugin_version">Version 1.27 (GPL, Last Updated 2018-07-23)</dd>
+            <dd class="plugin_version">Version 1.28 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2018-08-06)</dd>
+            <dd class="plugin_version">Version 1.74 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1708,7 +1708,7 @@
         <h4 class="plugin_summary">Frequently Asked Questions</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_faq</dt>
-            <dd class="plugin_version">Version 1.29 (GPL, Last Updated 2017-04-10)</dd>
+            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Falk Doering, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1724,7 +1724,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.66 (GPL, Last Updated 2018-08-05)</dd>
+            <dd class="plugin_version">Version 3.67 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -1856,9 +1856,9 @@
         <h4 class="plugin_summary">Discussion forum / phpBB comment mirroring</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_forum</dt>
-            <dd class="plugin_version">Version 0.38.2 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.39 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Alexander 'dma147' Mieland, http://blog.linux-stats.org, dma147@linux-stats.org</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Provides a complete discussion forum to your users. Can alternatively provide to mirror comments into a phpBB installation.</p>
         <ul class="plugin_actions">
@@ -1872,9 +1872,9 @@
         <h4 class="plugin_summary">Downloadmanager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_downloadmanager</dt>
-            <dd class="plugin_version">Version 0.38 (GPL, Last Updated 2016-10-27)</dd>
+            <dd class="plugin_version">Version 0.39 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Grischa Brockhaus, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Provides full downloadmanager capabilities to your s9y. When uninstalling, all related tables will be dropped!</p>
         <ul class="plugin_actions">
@@ -1988,8 +1988,8 @@
         <h4 class="plugin_summary">Comment Spice</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentspice</dt>
-            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2018-04-06)</dd>
-            <dd class="plugin_maintainers">Grischa Brockhaus</dd>
+            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_maintainers">Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Spice up your comments area with goodies like commenters twitter or last posted article link and nofollows by rules.</p>
@@ -2168,7 +2168,7 @@
         <h4 class="plugin_summary">Avatar Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_gravatar</dt>
-            <dd class="plugin_version">Version 1.68 (GPL, Last Updated 2018-03-31)</dd>
+            <dd class="plugin_version">Version 1.69 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -2200,7 +2200,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.13 (GPL, Last Updated 2018-05-25)</dd>
+            <dd class="plugin_version">Version 1.14 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2364,7 +2364,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.13 (GPL, Last Updated 2018-05-25)</dd>
+            <dd class="plugin_version">Version 1.14 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2588,7 +2588,7 @@
         <h4 class="plugin_summary">Markup: Wiki</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_textwiki</dt>
-            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2016-08-27)</dd>
+            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Tobias Schlitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2768,7 +2768,7 @@
         <h4 class="plugin_summary">Markup: Track exits</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_trackexits</dt>
-            <dd class="plugin_version">Version 1.14 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2018-08-10)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
