book and doc: Deprecation of $head_version

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -170,7 +170,7 @@
                                   <li><a href="#docs-footer_prev_page-string-footer_next_page-string-footer_totalentries-string-footer_info-string">$footer_prev_page [string], $footer_next_page [string] $footer_totalEntries [int], $footer_totalPages [int], $footer_currentPage [int], $footer_pageLink [string], $footer_info [string]</a></li>
                                   <li><a href="#docs-plugin_clean_page-bool-comments_messagestack-array-is_comment_added-bool-is_comment_moderate-bool-entries-array">$plugin_clean_page [bool], $comments_messagestack [array], $is_comment_added [bool], $is_comment_moderate [bool], $entries [array]</a></li>
                                   <li><a href="#docs-trackbacks-array">$trackbacks [array]</a></li>
-                                  <li><a href="#docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [string], $head_version [string], $head_title [string], $head_subtitle [string], $head_link_stylesheet [string], $is_xhtml [bool], $serendipityVersion [string], $lang [string], $head_link_script [string], $head_link_stylesheet_frontend [string], $is_logged_in [bool]</a></li>
+                                  <li><a href="#docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [string], $head_version [string] <em>(deprecated)</em>, $head_title [string], $head_subtitle [string], $head_link_stylesheet [string], $is_xhtml [bool], $serendipityVersion [string], $lang [string], $head_link_script [string], $head_link_stylesheet_frontend [string], $is_logged_in [bool]</a></li>
                                   <li><a href="#docs-use_popups-bool-is_embedded-bool-is_raw_mode-bool">$use_popups [bool], $is_embedded [bool], $is_raw_mode [bool]</a></li>
                                   <li><a href="#docs-entry_id-int-is_single_entry-bool">$entry_id [int], $is_single_entry [bool]</a></li>
                                   <li><a href="#docs-blogtitle-string-blogsubtitle-string-blogdescription-string">$blogTitle [string], $blogSubTitle [string], $blogDescription [string]</a></li>
@@ -1202,7 +1202,7 @@ It is not advised to create your own  style_fallback.css file.</p>
 
 <p>Scope: trackbacks.tpl</p>
 
-<h5 id="docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [string], $head_version [string], $head_title [string], $head_subtitle [string], $head_link_stylesheet [string], $is_xhtml [bool], $serendipityVersion [string], $lang [string], $head_link_script [string], $head_link_stylesheet_frontend [string], $is_logged_in [bool]</h5>
+<h5 id="docs-head_charset-string-head_version-string-head_title-string-is_logged_in-bool">$head_charset [string] <em>(deprecated)</em>, $head_version [string], $head_title [string], $head_subtitle [string], $head_link_stylesheet [string], $is_xhtml [bool], $serendipityVersion [string], $lang [string], $head_link_script [string], $head_link_stylesheet_frontend [string], $is_logged_in [bool]</h5>
 
 <p>Multiple variables defining the Serendipity version/language, Blog title and link to Stylesheets. <code>$head_title</code> and <code>$head_subtitle</code> are set according to which action is currently performed on the Frontend (category view, archive view etc.)</p>
 
