hc: Fixing typos

--- a/hc/en/categories.html
+++ b/hc/en/categories.html
@@ -107,7 +107,7 @@
                       <li><strong>Read Permission</strong>: User Groups that may read entries assigned to this category.</li>
                       <li><strong>Write Permission</strong>: User groups that may assign entries to this category.</li>
                       <li><strong>Parent Category</strong>: Top level category is this category is a sub category.</li>
-                      <li><strong>Hide postings made to sub-categories?</strong>: By default, when you browse a category, entries assngied to any subcategory are also displayed. If this option is enabled, only postings of this subcategory are displayed.</li>
+                      <li><strong>Hide postings made to sub-categories?</strong>: By default, when you browse a category, entries assigned to any subcategory are also displayed. If this option is enabled, only postings of this subcategory are displayed.</li>
                     </ul>
                 </div>
             </div>
