--- a/hc/en/rss.html
+++ b/hc/en/rss.html
@@ -126,7 +126,7 @@
 
                     <p>Serendipity supports all known and documented RSS versions, <a href="http://atomenabled.org/">Atom</a> 0.3 and 1.0, and <a href="http://opml.org/">OPML</a> 1.0.</p>
 
-                    <p>If you enable the <em>Syndication Sidebar plugin</em> you can select which versions you want to make public to your audience. The link to those RDF/XML files can be interpreted by most RSS readers and contain additional information to your entries: Number of Comments, Link to Comments, a small logo for your feed, mail contact adresses and even License information.</p>
+                    <p>If you enable the <em>Syndication Sidebar plugin</em> you can select which versions you want to make public to your audience. The link to those RDF/XML files can be interpreted by most RSS readers and contain additional information to your entries: Number of Comments, Link to Comments, a small logo for your feed, mail contact addresses and even License information.</p>
 
                     <p>The RSS feature of PHP also supports <a href="./conditional-get.html">Conditional Get for RSS Feeds</a>.</p>
 
