--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -319,7 +319,7 @@
 
                     <p>After you have downloaded all files you can go to your Serendipity Plugin manager and on the list of available plugins you will see your latest acquired plugin. :-)</p>
 
-                    <p>The same applies when having downloaded our Netmirror Snapshot file. Just extract the tarball somewher and copy the files and directory you want to your /plugins subdirectory of the Serendipity installation.</p>
+                    <p>The same applies when having downloaded our Netmirror Snapshot file. Just extract the tarball somewhere and copy the files and directory you want to your /plugins subdirectory of the Serendipity installation.</p>
 
                     <h2 id="docs-available-activated-sidebar-plugins-bundled-with-s9y">Available active sidebar plugins bundled with Serendipity</h2>
 
@@ -345,7 +345,7 @@
 
                     <h3 id="docs-powered-by">Powered by</h3>
 
-                    <p>This shows our small “powered by” logo inside your blog. So that everyone can see you’re an elite-blogger. ;-)</p>
+                    <p>This shows our small “powered by” logo inside your blog. So that everyone can see you’re an elite-blogger. 😉</p>
 
                     <h3 id="docs-syndication">Syndication</h3>
 
@@ -356,7 +356,7 @@
                     <ul>
                       <li><strong>RSS versions</strong>: You can check which syndication formats you want to make available to your audience: RSS 0.91, 1.0, 2.0 or Atom 0.3.</li>
                       <li><strong>Prevent caching</strong>: Usually your RSS feed is cached via <a href="conditional-get.html">Conditional Get</a>. With this setting you can turn of caching</li>
-                      <li><strong>RSS fields</strong>: There are a bunch of special fields which can be embedded into your blog, like your E-Mail adress for error reports, a small image depicting your site and others</li>
+                      <li><strong>RSS fields</strong>: There are a bunch of special fields which can be embedded into your blog, like your E-Mail address for error reports, a small image depicting your site and others</li>
                     </ul>
 
                     <h2 id="docs-available-non-active-sidebar-plugins-bundled-with-s9y">Available non-active sidebar plugins bundled with Serendipity</h2>
