hc-spam: Add new timeframe option

--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -111,6 +111,7 @@
                                 <li><a href="#docs-enable-captchas" id="toc-docs-enable-captchas">Enable Captchas</a></li>
                                 <li><a href="#docs-force-captchas-after-how-many-days" id="toc-docs-force-captchas-after-how-many-days">Force Captchas after how many days</a></li>
                                 <li><a href="#docs-background-color-of-the-captcha" id="toc-docs-background-color-of-the-captcha">Background color of the Captcha</a></li>
+                                <li><a href="#docs-time-frame-for-comments-within-x-days" id="toc-docs-time-frame-for-comments-within-x-days">Time frame for comments within X days</a><li>
                                 <li><a href="#docs-force-comment-moderation-after-how-many-days" id="toc-docs-force-comment-moderation-after-how-many-days">Force comment moderation after how many days</a></li>
                                 <li><a href="#docs-what-to-do-with-comments-when-being-auto-moderated" id="toc-docs-what-to-do-with-comments-when-being-auto-moderated">What to do with comments when being auto-moderated?</a></li>
                                 <li><a href="#docs-force-trackback-moderation-after-how-many-days" id="toc-docs-force-trackback-moderation-after-how-many-days">Force trackback moderation after how many days</a></li>
@@ -193,6 +194,10 @@
                     <h4 id="docs-background-color-of-the-captcha">Background color of the Captcha</h4>
 
                     <p>Here you can customize the background color of your auto-generated Captcha image.</p>
+
+                    <h4 id="docs-time-frame-for-comments-within-x-days">Time frame for comments within X days</h4>
+
+                    <p>With Serendipity Styx 2.6 and up the comment function of an article may only globally be allowed for a limited period of X days starting from the article date. This might be a valid request to make sure your Blog is not flooded with bogus comments for old entries. The default value is "0" and allows comments to any existing article without age limit. Under normal conditions your entries usually don't get very much valid comments after a certain amount of time.</p>
 
                     <h4 id="docs-force-comment-moderation-after-how-many-days">Force comment moderation after how many days</h4>
 
