hc-conf: Remove MySQL in favor of MySQLi

--- a/hc/en/configuration.html
+++ b/hc/en/configuration.html
@@ -159,7 +159,7 @@
                     <p>Most configuration choices are saved in your database, however database settings are saved on the host server in a file named serendipity_config_local.inc.php. Serendipity cannot function without these key pieces of information.</p>
 
                     <ul>
-                      <li><strong>Database type</strong> [list] MySQL PostgreSQL MySQLi SQLite</li>
+                      <li><strong>Database type</strong> [list] MySQLi, PostgreSQL, SQLite</li>
                       <li><strong>Database host</strong> [string] The hostname for your database server.</li>
                       <li><strong>Database user</strong> [string] The username used to connect to your database.</li>
                       <li><strong>Database password</strong> [protected] The password matching the database username.</li>
