hc-comments: Change ThumbUp to Toggle-On/Off button

--- a/hc/en/approving-comments.html
+++ b/hc/en/approving-comments.html
@@ -100,7 +100,7 @@
                     <h2 id="docs-approve-comments">Approve comments</h2>
                     <p>You may wish to moderate comments visitors make to your entries so they are not seen by others until they have been approved. To enable this feature, check the box labeled “Comments &amp; trackbacks to this entry requires moderation” when first creating or editing an entry. You can also make this the default setting on a user by user basis from Backend → Personal Settings.</p>
                     <p>Once enabled, comments will not appear when first submitted. To approve moderated comments, go to Backend → Activity → Comments in the “Activity” menu.</p>
-                    <p>Comments are listed in reverse chronological order (newest first). The default admin template shows pending (moderated, not yet approved) outsigned as “Pending approval”. To approve the comment, simply click on the “ThumbUp”-buttom labeled “Approve”, or click on “Delete” to remove the comment. There are also additional button-links available to quickly edit or reply to the comment.</p>
+                    <p>Comments are listed in reverse chronological order (newest first). The default admin template shows pending (moderated, not yet approved) outsigned as “Pending approval”. To approve the comment, simply click on the “Toggle-On/Off”-button labeled “Approve”, or click on “Delete” to remove the comment. There are also additional button-links available to quickly edit or reply to the comment.</p>
                 </div>
             </div>
         </div>
