--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -111,7 +111,7 @@
                                 <li><a href="#docs-enable-captchas" id="toc-docs-enable-captchas">Enable Captchas</a></li>
                                 <li><a href="#docs-force-captchas-after-how-many-days" id="toc-docs-force-captchas-after-how-many-days">Force Captchas after how many days</a></li>
                                 <li><a href="#docs-background-color-of-the-captcha" id="toc-docs-background-color-of-the-captcha">Background color of the Captcha</a></li>
-                                <li><a href="#docs-time-frame-for-comments-within-x-days" id="toc-docs-time-frame-for-comments-within-x-days">Time frame for comments within X days</a><li>
+                                <li><a href="#docs-time-frame-for-comments-within-x-days" id="toc-docs-time-frame-for-comments-within-x-days">Time frame for comments within X days</a></li>
                                 <li><a href="#docs-force-comment-moderation-after-how-many-days" id="toc-docs-force-comment-moderation-after-how-many-days">Force comment moderation after how many days</a></li>
                                 <li><a href="#docs-what-to-do-with-comments-when-being-auto-moderated" id="toc-docs-what-to-do-with-comments-when-being-auto-moderated">What to do with comments when being auto-moderated?</a></li>
                                 <li><a href="#docs-force-trackback-moderation-after-how-many-days" id="toc-docs-force-trackback-moderation-after-how-many-days">Force trackback moderation after how many days</a></li>
