--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -205,7 +205,7 @@
 <div>
     <p>While Serendipity in itself means “The faculty of making fortunate discoveries by accident.”, the name was invented by Horace Walpole 1754, which became used and famous since the 19th century.</p>
 
-    <p>What does “s9y” mean? “s9y” is an abbreviation of “Serendipity”, much like “i18n” is an abbriviation of “Internationalization”.</p>
+    <p>What does “s9y” mean? “s9y” is an abbreviation of “Serendipity”, much like “i18n” is an abbreviation of “Internationalization”.</p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
@@ -215,7 +215,7 @@
 <h4 id="docs-how-do-i-install-serendipity">How do I install Serendipity?</h4>
 
 <div>
-    <p>Just download the <a href="https://github.com/ophian/styx/releases">release package</a> to your server, unpack it inside your document root, make sure the created directory is writeable by the webserver (in most cases <code>/chmod 770 serendipity/</code> will do) and open it in your web browser. You will see the installation screen that lets you set up Serendipity. You’ll be up and running in about 2 minutes!</p>
+    <p>Just download the <a href="https://github.com/ophian/styx/releases">release package</a> to your server, unpack it inside your document root, make sure the created directory is writable by the webserver (in most cases <code>/chmod 770 serendipity/</code> will do) and open it in your web browser. You will see the installation screen that lets you set up Serendipity. You’ll be up and running in about 2 minutes!</p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
@@ -245,7 +245,7 @@
 <h4 id="docs-i-cannot-access-any-files-in-subdirectories-or-redirects-to-my-blog-page">When I use mod_rewrite URL rewriting, I cannot access any files in subdirectories of my Serendipity install | If I go to any of my own URLs it keeps redirecting me to my blog page</h4>
 
 <div>
-    <p>You need to put a <strong>.htaccess</strong> file into each subdirectory which is not related to Serendipty. The only contents of this file needs to be <em>“RewriteEngine Off”</em>. With this you tell the Webserver that the directory is independent from Serendipity and thus no Serendipity Rewrite-Rules shall be applied. <strong>Regard:</strong> .htaccess file rules match to any following subdirs.</p>
+    <p>You need to put a <strong>.htaccess</strong> file into each subdirectory which is not related to Serendipity. The only contents of this file needs to be <em>“RewriteEngine Off”</em>. With this you tell the Webserver that the directory is independent from Serendipity and thus no Serendipity Rewrite-Rules shall be applied. <strong>Regard:</strong> .htaccess file rules match to any following subdirs.</p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
@@ -349,7 +349,7 @@ require valid-user
 
     <p>It will tell you which version you are running, and which tasks are going to get executed. That means some PHP functions can be called, and some DB updates are called. The DB update files are stored in the <code>sql/</code> subdirectory of Serendipity.</p>
 
-    <p>Before you continue the process, make sure that the PHP/Apache webserver is able to write to your <code>serendipity_config_local.inc.php</code> and <code>.htaccess</code> file, and that the directory <code>templates_c/</code> exists and is writable. You can change permissions using chmod commands in your favourite FTP or SSH client.</p>
+    <p>Before you continue the process, make sure that the PHP/Apache webserver is able to write to your <code>serendipity_config_local.inc.php</code> and <code>.htaccess</code> file, and that the directory <code>templates_c/</code> exists and is writable. You can change permissions using chmod commands in your favorite FTP or SSH client.</p>
 
     <p>Also make sure that your configured database users are privileged to execute ALTER TABLE, CREATE TABLE and CREATE INDEX commands!</p>
 
@@ -370,7 +370,7 @@ require valid-user
     <p>The easiest method would be to restore the backup you made previously, and then run the upgrade again. If you haven’t made the backup or want to make it faster, you can do that by:</p>
 
     <ol class="styx-counter">
-      <li>Edit your <code><code>serendipity_config_local.inc.php</code></code> file. Usually that file is only writable for the Webserver. If you cannot modify it via SSH/FTP, you can create a simple fixperm.php script in your Serendipity directory with these contents:</li>
+      <li>Edit your <code><code>serendipity_config_local.inc.php</code></code> file. Usually that file is only writable for the webserver. If you cannot modify it via SSH/FTP, you can create a simple fixperm.php script in your Serendipity directory with these contents:</li>
 
       <p><strong>fixperm.php</strong></p>
 
@@ -378,7 +378,7 @@ require valid-user
 chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>', 0777);
 ?&gt;</code></pre>
 
-      <p>On some hosts, the user as which your webserver runs is different than the user that you have FTP/SSH privileges for. In usual environments, your FTP user should be within the same group like your webserver user, so that you are able to modify files with the right umask. However, some providers might not think about that and thus deny you access to your own files. In those cases you also need the script above to change file permissions if you need to manually edit/delete a special file. Note that plugins copied by spartacus and images uploaded via the Serendipity Admin suite are affected by the same problem. You can change the default file/directory of the Spartacus plugin though by it’s configuration.</p>
+      <p>On some hosts, the user as which your webserver runs is different than the user that you have FTP/SSH privileges for. In usual environments, your FTP user should be within the same group like your webserver user, so that you are able to modify files with the right umask. However, some providers might not think about that and thus deny you access to your own files. In those cases you also need the script above to change file permissions if you need to manually edit/delete a special file. Note that plugins copied by Spartacus and images uploaded via the Serendipity-Admin-Suite are affected by the same problem. You can change the default file/directory of the Spartacus plugin though by it’s configuration.</p>
 
       <p>Then call that simple script via http://yourblog/serendipity/fixperm.php and the filepermissions will be changed so that you can write the file. For security reasons, change the permissions of the config file back to what it was previously after upgrading (like 0744 or so).</p>
 
@@ -429,7 +429,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
         <li>Url Rewriting</li>
         <p>Serendipity offers several forms of URL Rewriting, to make your URLs look pretty. So instead of having the URL <code>http://localhost/index.php?article=1</code> you can have something nice like <code>http://localhost/archives/1-myentry.html</code>.</p>
 
-        <p>To achieve this, Serendipity either uses <strong>mod_rewrite</strong> or the <strong>Apache Errorhandling</strong> functionality. Both may not be available on all hosts, and require a certain setup (“AllowOverride All”) to apply rewriting within your <code>.htaccess</code> file. Serendipity tries to autodetect your best setting in the installer, but under certain circumstances, this might fail. Or you might even change the suggested setting during installation without knowing the problems.</p>
+        <p>To achieve this, Serendipity either uses <strong>mod_rewrite</strong> or the <strong>Apache Errorhandling</strong> functionality. Both may not be available on all hosts, and require a certain setup (“AllowOverride All”) to apply rewriting within your <code>.htaccess</code> file. Serendipity tries to auto detect your best setting in the installer, but under certain circumstances, this might fail. Or you might even change the suggested setting during installation without knowing the problems.</p>
 
         <p>The problems of enabling URL Rewriting without meeting the requirements are the problems you’re now having: Stylesheet URLs cannot be find, article links cannot be found and so on, or even your .htaccess might contain “dangerous” settings.</p>
 
@@ -440,7 +440,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
         <p>What can also affect the symptom of “no stylesheets are used” is if you enabled the ‘embed’ directive in Serendipity Configuration. As mentioned in the Configuration, if you enabled this setting, you must take care for the HTML head and body sections for yourself, Serendipity only outputs the straight content and nothing different. So either disable the embed mode, or use it as intended. :-)</p>
 
         <li>CORS - Cross-Origin Request Policy/Security</li>
-        <p>If you get thid kind of error message:</p>
+        <p>If you get this kind of error message:</p>
         <blockquote>Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at 'blahblah'. This can be fixed by moving the resource to the same domain or enabling CORS.</blockquote>
         <p>and you main backend navigation buttons look strange, you might have a cross-origin request policy error, assuming some (font) files not allowed to load. Usually, this would only happen if for instance the font files lived on a different server.</p>
         <p>Assuming that you can edit your <strong>.htaccess</strong> file (with a text editor), you should be able to fix this by adding something to it. First, check if there <em>is</em> a file called <em>.htaccess</em> in the root directory of your web space (i.e. the directory to which you installed Serendipity). The file might not be shown in your FTP tool (FileZilla) because of the beginning dot; check its preferences “Display hidden/system files” to make it show up.</p>
@@ -457,7 +457,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 <h4 id="docs-the-text-in-a-blog-entry-has-additional-spacing">The text in a blog entry has additional spacing</h4>
 
 <div>
-    <p>Check your source using your browser’s View/Source capabilities. Are there extra <code>&lt;br /&gt;</code> tags where the extra space occurs? If yes, check the settings of your nl2br event (<code>serendipity_event_nl2br</code>) plugin. <ul><li>If you use a <strong>WYSIWYG</strong> editor to write your entries this should not occur.</li><li>If you just use the simple <strong>PLAIN TEXT</strong> editor you want them to have.</li><li>If you use <strong>another markup</strong> editor like <em>textile</em> or <em>markdown</em>, or write html per hand, disable the use for entries.</li></ul></p>
+    <p>Check your source using your browser’s View/Source capabilities. Are there extra <code>&lt;br /&gt;</code> tags where the extra space occurs? If yes, check the settings of your nl2br event (<code>serendipity_event_nl2br</code>) plugin. <ul><li>If you use a <strong>WYSIWYG</strong> editor to write your entries this should not occur.</li><li>If you just use the simple <strong>PLAIN TEXT</strong> editor you want them to have.</li><li>If you use <strong>another markup</strong> editor like <em>textile</em> or <em>markdown</em>, or write HTML per hand, disable the use for entries.</li></ul></p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
